--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalculaTmobile </title>
     <link rel="stylesheet" href="static/css/style.css">
+    <script src="https://kit.fontawesome.com/09b9a7264c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body id="body">
@@ -15,11 +16,11 @@
     </header>        
     <nav class="container-nav">
         <a href="descarga.html">Descargar</a>
-        <a href="#">Contacto</a>
+        <a href="contacto.html">Contacto</a>
         <div class="modo">
-            <span class="material-symbols-outlined" id="modoclaro">
+            <i class="material-symbols-outlined" id="modoclaro">
                 dark_mode
-            </span>
+            </i>
         </div>
     </nav>
 
@@ -32,14 +33,18 @@
                 <img src="static/gif_precentation.gif" class="img-celu" alt="img-celu">
             </div>
             <div class="text-bienvenida">
-                <h1>Bienvenida ala aplicion</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis modi earum ut aut ducimus, maiores, obcaecati nemo quod facilis omnis dolor. Error, laboriosam. Incidunt blanditiis aut, earum officiis architecto unde</p>
+                <div class="text">
+                    <h1>Bienvenida ala aplicion</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis modi earum ut aut ducimus, maiores, obcaecati nemo quod facilis omnis dolor. Error, laboriosam. Incidunt blanditiis aut, earum officiis architecto unde</p>
+                </div>
             </div>
         </div>
         <div class="container-img-txt">
             <div class="text-precentation fade_text text_izq img-1">
-                <h2>Uso de tal cosa</h2>
+                <div class="text">
+                    <h2>Uso de tal cosa</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis modi earum ut aut ducimus, maiores, obcaecati nemo quod facilis omnis dolor. Error, laboriosam. Incidunt blanditiis aut, earum officiis architecto unde</p>
+                </div>
             </div>
             <div class="img-gif-izq">
                 <img src="static/gif-hormigon.gif" class="img_gif_estandar fade_left img-celu" alt="img-cel">
@@ -50,21 +55,41 @@
                 <img src="static/gif-ladrillos.gif" class="img_gif_estandar fade_right img-celu" alt="img-cel">
             </div>
             <div class="text-precentation fade_text text_der img-2">
-                <h2>Uso de tal cosa</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis modi earum ut aut ducimus, maiores, obcaecati nemo quod facilis omnis dolor. Error, laboriosam. Incidunt blanditiis aut, earum officiis architecto unde</p>
+                <div class="text">
+                    <h2>Uso de tal cosa</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis modi earum ut aut ducimus, maiores, obcaecati nemo quod facilis omnis dolor. Error, laboriosam. Incidunt blanditiis aut, earum officiis architecto unde</p>    
+                </div>
             </div>
         </div>
         <div class="container-img-txt">
             <div class="text-precentation fade_text text_izq img-3">
-                <h2>Uso de tal cosa</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis modi earum ut aut ducimus, maiores, obcaecati nemo quod facilis omnis dolor. Error, laboriosam. Incidunt blanditiis aut, earum officiis architecto unde</p>
+                <div class="text">
+                    <h2>Uso de tal cosa</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis modi earum ut aut ducimus, maiores, obcaecati nemo quod facilis omnis dolor. Error, laboriosam. Incidunt blanditiis aut, earum officiis architecto unde</p>
+                </div>
             </div>
             <div class="img-gif-izq">
                 <img src="static/gif-dolar.gif" class="img_gif_estandar fade_left img-celu" alt="img-cel">
             </div>
         </div>        
     </section>
-    <div></div>
+    <footer>
+        <div class="Fimg">
+            <img class="imgF" src="static/logo-color.png" alt="">
+        </div>
+        <div class="Ftelderechos">
+                    <div class="Fredes">
+                        <i class="fa-brands fa-facebook f" style="color: blue;"></i>
+                        <i class="fa-brands fa-square-instagram" style="color: brown;"></i>
+                        <i class="fa-brands fa-square-whatsapp" style="color: green;"></i></i>
+                    </div>
+                    <ul>
+                        <li>+54-2664-025070</li>
+                        <li>gabriel.ska0@gmail.com</li>
+                        <li>© 2024 Angel Rios. Todos los derechos reservados.</li>
+                    </ul>
+        </div>
+    </footer>
 </body>
 <script src="JS/index.js"></script>
 </html>
