--- a/contacto.html
+++ b/contacto.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descargar</title>
-    <link rel="stylesheet" href="static/css/style-descargar.css">
+    <link rel="stylesheet" href="static/css/style-contacto.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://kit.fontawesome.com/09b9a7264c.js" crossorigin="anonymous"></script>
+    <title>Contacto</title>
 </head>
 <body id="body" style=>
     <header>
@@ -16,7 +16,7 @@
     </header>        
     <nav class="container-nav">
         <a href="index.html">Inicio</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="descarga.html">Descargar</a>
         <div class="modo">
             <i class="material-symbols-outlined" id="modoclaro">
                 dark_mode
@@ -30,13 +30,18 @@
         <div class="android2">
             <img src="static/android.png" alt="android-app">
         </div>
-        <div class="text-precentation">
-            <div class="text">
-                <h2>¡Descarga nuestra app de cálculo¡</h2>
-                <p>¿Estás planeando un proyecto de construcción pequeño o mediano? Nuestra aplicación te facilita el cálculo preciso de los materiales necesarios. Ahorra tiempo y dinero con nuestra herramienta intuitiva y fácil de usar. ¡Descarga ahora el archivo APK y lleva tus proyectos al siguiente nivel!</p>
-                <a href="descarga/claculate.apk" download="Calculatec">[Descargar APK]</a>
+        <div class="text-precentation"> 
+                <h3>Contancto</h3>
+                <form id="form-contact" method="POST">
+                    <label for="Name">Nombre</label>
+                    <input id="Name" type="text" name="name" required="true">
+                    <label for="Correo">Email</label>
+                    <input id="Correo" type="Email" name="email" required="true">
+                    <label for="Mensaje">Mensaje</label>
+                    <textarea id="Mensaje" name="mensaje" required="true"></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
             </div>
-            
         </div>
     </div>
     <footer>
