--- a/descarga.html
+++ b/descarga.html
@@ -34,7 +34,7 @@
             <div class="text">
                 <h2>¡Descarga nuestra app de cálculo¡</h2>
                 <p>¿Estás planeando un proyecto de construcción pequeño o mediano? Nuestra aplicación te facilita el cálculo preciso de los materiales necesarios. Ahorra tiempo y dinero con nuestra herramienta intuitiva y fácil de usar. ¡Descarga ahora el archivo APK y lleva tus proyectos al siguiente nivel!</p>
-                <a href="descarga/claculate.apk" download="Calculatec">[Descargar APK]</a>
+                <a href="https://github.com/Ange-os/Calculate.Web/blob/main/descarga/claculate.apk" download="Calculatec">[Descargar APK]</a>
             </div>
             
         </div>
