--- a/contacto.html
+++ b/contacto.html
@@ -9,12 +9,12 @@
     <title>Contacto</title>
 </head>
 <body id="body" style=>
-    <header>
+    <header class="luz">
             <div class="container-tittle">
                 <img id="img-logo"  src="static/no-bg.png" class="img-logo" alt="logo-app-mobile">
             </div>
     </header>        
-    <nav class="container-nav">
+    <nav class="container-nav luz">
         <a href="index.html">Inicio</a>
         <a href="descarga.html">Descargar</a>
         <div class="modo">
@@ -30,7 +30,7 @@
         <div class="android2">
             <img src="static/android.png" alt="android-app">
         </div>
-        <div class="text-precentation"> 
+        <div class="text-precentation luz"> 
                 <h3>Contancto</h3>
                 <form id="form-contact" method="POST">
                     <label for="Name">Nombre</label>
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="luz">
         <div class="Fimg">
             <img class="imgF" src="static/logo-color.png" alt="">
         </div>
