--- a/descarga.html
+++ b/descarga.html
@@ -9,12 +9,12 @@
     <script src="https://kit.fontawesome.com/09b9a7264c.js" crossorigin="anonymous"></script>
 </head>
 <body id="body" style=>
-    <header>
+    <header class="luz">
             <div class="container-tittle">
                 <img id="img-logo"  src="static/no-bg.png" class="img-logo" alt="logo-app-mobile">
             </div>
     </header>        
-    <nav class="container-nav">
+    <nav class="container-nav luz">
         <a href="index.html">Inicio</a>
         <a href="contacto.html">Contacto</a>
         <div class="modo">
@@ -30,7 +30,7 @@
         <div class="android2">
             <img src="static/android.png" alt="android-app">
         </div>
-        <div class="text-precentation">
+        <div class="text-precentation luz">
             <div class="text">
                 <h2>¡Descarga nuestra app de cálculo¡</h2>
                 <p>¿Estás planeando un proyecto de construcción pequeño o mediano? Nuestra aplicación te facilita el cálculo preciso de los materiales necesarios. Ahorra tiempo y dinero con nuestra herramienta intuitiva y fácil de usar. ¡Descarga ahora el archivo APK y lleva tus proyectos al siguiente nivel!</p>
@@ -39,7 +39,7 @@
             
         </div>
     </div>
-    <footer>
+    <footer class="luz">
         <div class="Fimg">
             <img class="imgF" src="static/logo-color.png" alt="">
         </div>
