--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body id="body">
-    <header>
+    <header class="luz">
             <div class="container-tittle">
                 <img id="img-logo"  src="static/no-bg.png" class="img-logo" alt="logo-app-mobile">
             </div>
     </header>        
-    <nav class="container-nav">
+    <nav class="container-nav luz">
         <a href="descarga.html">Descargar</a>
         <a href="contacto.html">Contacto</a>
         <div class="modo">
@@ -28,7 +28,7 @@
         <div class="android">
             <img src="static/android.png" alt="android-app">
         </div>
-        <div class="container-img-txt">
+        <div class="container-img-txt luz">
             <div class="img-gif-der">
                 <img src="static/gif_precentation.gif" class="img-celu" alt="img-celu">
             </div>
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-img-txt">
+        <div class="container-img-txt luz">
             <div class="text-precentation fade_text text_izq img-1">
                 <div class="text">
                     <h2>Uso de tal cosa</h2>
@@ -50,7 +50,7 @@
                 <img src="static/gif-hormigon.gif" class="img_gif_estandar fade_left img-celu" alt="img-cel">
             </div>
         </div>
-        <div class="container-img-txt">
+        <div class="container-img-txt luz">
             <div class="img-gif-der">
                 <img src="static/gif-ladrillos.gif" class="img_gif_estandar fade_right img-celu" alt="img-cel">
             </div>
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-img-txt">
+        <div class="container-img-txt luz">
             <div class="text-precentation fade_text text_izq img-3">
                 <div class="text">
                     <h2>Uso de tal cosa</h2>
@@ -73,7 +73,7 @@
             </div>
         </div>        
     </section>
-    <footer>
+    <footer class="luz">
         <div class="Fimg">
             <img class="imgF" src="static/logo-color.png" alt="">
         </div>
