--- a/contacto.html
+++ b/contacto.html
@@ -9,14 +9,14 @@
     <title>Contacto</title>
 </head>
 <body id="body" style=>
-    <header class="luz">
+    <header class="luz animated bounceInDown">
             <div class="container-tittle">
                 <img id="img-logo"  src="static/no-bg.png" class="img-logo" alt="logo-app-mobile">
             </div>
     </header>        
     <nav class="container-nav luz">
-        <a href="index.html">Inicio</a>
-        <a href="descarga.html">Descargar</a>
+        <a href="index.html" class="animated bounceInRight">Inicio</a>
+        <a href="descarga.html" class="animated bounceInLeft">Descargar</a>
         <div class="modo">
             <i class="material-symbols-outlined" id="modoclaro">
                 dark_mode
@@ -24,15 +24,15 @@
         </div>
     </nav>
     <div class="content">
-        <div class="android">
+        <div class="android animated zoomIn">
             <img src="static/android.png" alt="android-app">
         </div>
-        <div class="android2">
+        <div class="android2 animated zoomIn">
             <img src="static/android.png" alt="android-app">
         </div>
-        <div class="text-precentation luz"> 
+        <div class="text-precentation luz animated bounceInRight"> 
                 <h3>Contancto</h3>
-                <form id="form-contact" method="POST">
+                <form class="animated bounceInLeft" id="form-contact" method="POST">
                     <label for="Name">Nombre</label>
                     <input id="Name" type="text" name="name" required="true">
                     <label for="Correo">Email</label>
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <footer class="luz">
+    <footer class="luz animated bounceInUp">
         <div class="Fimg">
             <img class="imgF" src="static/logo-color.png" alt="">
         </div>
