--- a/descarga.html
+++ b/descarga.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://kit.fontawesome.com/09b9a7264c.js" crossorigin="anonymous"></script>
 </head>
-<body id="body" style=>
-    <header class="luz">
+<body id="body">
+    <header class="luz animated bounceInDown">
             <div class="container-tittle">
                 <img id="img-logo"  src="static/no-bg.png" class="img-logo" alt="logo-app-mobile">
             </div>
     </header>        
     <nav class="container-nav luz">
-        <a href="index.html">Inicio</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="index.html" class="animated bounceInRight">Inicio</a>
+        <a href="contacto.html" class="animated bounceInLeft">Contacto</a>
         <div class="modo">
             <i class="material-symbols-outlined" id="modoclaro">
                 dark_mode
@@ -24,14 +24,14 @@
         </div>
     </nav>
     <div class="content">
-        <div class="android">
+        <div class="android animated zoomIn">
             <img src="static/android.png" alt="android-app">
         </div>
-        <div class="android2">
+        <div class="android2 animated zoomIn">
             <img src="static/android.png" alt="android-app">
         </div>
-        <div class="text-precentation luz">
-            <div class="text">
+        <div class="text-precentation luz animated bounceInLeft">
+            <div class="text animated bounceInRight">
                 <h2>¡Descarga nuestra app de cálculo¡</h2>
                 <p>¿Estás planeando un proyecto de construcción pequeño o mediano? Nuestra aplicación te facilita el cálculo preciso de los materiales necesarios. Ahorra tiempo y dinero con nuestra herramienta intuitiva y fácil de usar. ¡Descarga ahora el archivo APK y lleva tus proyectos al siguiente nivel!</p>
                 <a href="https://github.com/Ange-os/Calculate.Web/blob/main/descarga/claculate.apk" download="Calculatec">[Descargar APK]</a>
@@ -39,7 +39,7 @@
             
         </div>
     </div>
-    <footer class="luz">
+    <footer class="luz animated bounceInUp">
         <div class="Fimg">
             <img class="imgF" src="static/logo-color.png" alt="">
         </div>
