--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body id="body">
-    <header class="luz">
+    <header class="luz animated bounceInDown">
             <div class="container-tittle">
                 <img id="img-logo"  src="static/no-bg.png" class="img-logo" alt="logo-app-mobile">
             </div>
     </header>        
     <nav class="container-nav luz">
-        <a href="descarga.html">Descargar</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="descarga.html" class="animated bounceInRight">Descargar</a>
+        <a href="contacto.html" class="animated bounceInLeft">Contacto</a>
         <div class="modo">
             <i class="material-symbols-outlined" id="modoclaro">
                 dark_mode
@@ -25,14 +25,14 @@
     </nav>
 
     <section class="container-content">
-        <div class="android">
-            <img src="static/android.png" alt="android-app">
+        <div class="android ">
+            <img class="animated zoomIn" src="static/android.png" alt="android-app">
         </div>
         <div class="container-img-txt luz">
-            <div class="img-gif-der">
+            <div class="img-gif-der animated bounceInLeft">
                 <img src="static/gif_precentation.gif" class="img-celu" alt="img-celu">
             </div>
-            <div class="text-bienvenida">
+            <div class="text-bienvenida animated bounceInRight">
                 <div class="text">
                     <h1>Bienvenida ala aplicion</h1>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis modi earum ut aut ducimus, maiores, obcaecati nemo quod facilis omnis dolor. Error, laboriosam. Incidunt blanditiis aut, earum officiis architecto unde</p>
