--- a/descarga.html
+++ b/descarga.html
@@ -34,9 +34,8 @@
             <div class="text animated bounceInRight">
                 <h2>¡Descarga nuestra app de cálculo¡</h2>
                 <p>¿Estás planeando un proyecto de construcción pequeño o mediano? Nuestra aplicación te facilita el cálculo preciso de los materiales necesarios. Ahorra tiempo y dinero con nuestra herramienta intuitiva y fácil de usar. ¡Descarga ahora el archivo APK y lleva tus proyectos al siguiente nivel!</p>
-                <a href="https://github.com/Ange-os/Calculate.Web/blob/main/descarga/claculate.apk" download="Calculatec">[Descargar APK]</a>
+                <a href="https://raw.githubusercontent.com/Ange-os/Calculate.Web/main/descarga/claculate.apk" download="Calculatec">[Descargar APK]</a>
             </div>
-            
         </div>
     </div>
     <footer class="luz animated bounceInUp">
