--- a/descarga.html
+++ b/descarga.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Descargar</title>
     <link rel="stylesheet" href="static/css/style-descargar.css">
+    <link rel="icon" href="static/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://kit.fontawesome.com/09b9a7264c.js" crossorigin="anonymous"></script>
 </head>
