--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,7 @@
                     <label for="Correo">Email</label>
                     <input id="Correo" type="Email" name="email" required="true">
                     <label for="Mensaje">Mensaje</label>
-                    <textarea id="Mensaje" name="mensaje" required="true"></textarea>
+                    <textarea id="Mensaje" name="message" required="true"></textarea>
                     <button type="submit">Enviar</button>
                 </form>
             </div>
